--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,7 @@ jobs:
       AMD_AMI_ID: ${{vars.AMD_AMI_ID}}
       KARPENTER_VERSION: ${{vars.KARPENTER_VERSION}}
       NODEGROUP_LABEL: ${{vars.NODEGROUP_LABEL}}
+      KARPENTER_IMAGE: ${{vars.KARPENTER_IMAGE}}
     steps:
       - name: Set permissions
         run: sudo chmod -R 777 /home/ubuntu/actions-runner/_work/pb-api-nest
